# Ayumu

./: .gitignore  LICENSE  Main.hs  README  Setup.lhs  ayumu.cabal
Ayumu/: AyDiff.hs  AyDoc.hs  Init.hs
Ayumu/Storage/: Common.hs  FS.hs
data/: Example.txt
tests/: Properties.hs
