name:                ayumu
version:             0.0.1.0
synopsis:            Fleixble and lightweight VCS
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable ayumu
  -- Hs-Source-Dirs:  Ayumu
  main-is: Main.hs
  other-modules: Ayumu
                 Ayumu.AyConf
                 Ayumu.AyDiff
                 Ayumu.AyDoc
  build-depends:       base ==4.5.*, transformers ==0.3.*, lens ==3.8.*, Diff ==0.3.*, fgl ==5.4.*, mtl ==2.1.*, optparse-applicative ==0.5.*, QuickCheck ==2.6.*, HUnit ==1.2.*
  
